# sku-ops

./: .cursorignore  .cursorrules  .cz-config.js  .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  DDD_MIGRATION.md  DEPLOY.md  DEPLOYMENT.md  LAUNCH_CHECKLIST.md  README.md  TESTING.md  backend_test.py  design_guidelines.json  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  image_testing.md  package.json  pyproject.toml  pyrightconfig.json  railway.toml  vercel.json
backend/: .dockerignore  .env  .env.example  Dockerfile  auth.py  config.py  db.py  full_schema.py  models.yaml  pyproject.toml  requirements.txt  routes.py  scheduler.py  server.py  startup.py
backend/adapters/: __init__.py  payment_factory.py  stripe_payment.py  stub_payment.py  stub_xero.py  xero_adapter.py  xero_factory.py
backend/api/: __init__.py  auth.py  chat.py  contractors.py  dashboard.py  departments.py  documents.py  financials.py  invoices.py  material_requests.py  payments.py  products.py  purchase_orders.py  reports.py  schemas.py  seed.py  settings.py  sku.py  vendors.py  webhooks.py  withdrawals.py  xero_auth.py
backend/assistant/agents/: agent_utils.py  deps.py  finance.py  general.py  insights.py  inventory.py  memory_extract.py  memory_store.py  ops.py  search.py
backend/assistant/api/: chat.py  monitoring.py  schemas.py  ws_chat.py
backend/assistant/application/: assistant.py  context_assembly.py  dag_synthesis_prompt.md  entity_graph.py  llm.py  query_router.py  session_state.py  session_store.py
backend/assistant/config/: models.yaml
backend/assistant/infrastructure/: agent_run_repo.py  embedding_store.py  schema.py
backend/catalog/api/: departments.py  products.py  schemas.py  sku.py  vendors.py
backend/catalog/application/: csv_import_service.py  product_family_lifecycle.py  product_lifecycle.py  queries.py  sku_lifecycle.py  sku_service.py  vendor_item_lifecycle.py
backend/catalog/domain/: department.py  errors.py  product.py  units.py  vendor.py
backend/catalog/infrastructure/: department_repo.py  product_family_repo.py  product_mutations.py  product_repo.py  sku_counter_repo.py  sku_mutations.py  sku_repo.py  vendor_item_repo.py  vendor_repo.py
backend/catalog/ports/: department_repo_port.py  product_repo_port.py  repositories.py  vendor_repo_port.py
backend/devtools/api/: seed.py
backend/devtools/evals/: runner.py  scorer.py
backend/devtools/scripts/: agent_monitor.py  backfill_withdrawal_costs.py  seed.py  seed_full.py  seed_realistic.py
backend/documents/api/: document_parse_prompt.md  documents.py
backend/documents/application/: enrichment_prompt.md  enrichment_service.py  import_parser.py  import_service.py  ocr_service.py  parse_service.py  queries.py
backend/documents/domain/: document.py
backend/documents/infrastructure/: document_repo.py  schema.py
backend/domain/: __init__.py  barcode.py  exceptions.py
backend/finance/adapters/: invoicing_factory.py  payment_factory.py  stripe_adapter.py  stub_payment.py  stub_xero.py  xero_adapter.py  xero_factory.py
backend/finance/api/: billing_entities.py  credit_notes.py  financials.py  fiscal_periods.py  invoices.py  payments.py  schemas.py  settings.py  webhooks.py  xero_auth.py  xero_health.py
backend/finance/application/: billing_entity_service.py  credit_note_service.py  fiscal_period_service.py  invoice_service.py  invoice_sync.py  ledger_analytics.py  ledger_queries.py  ledger_service.py  org_settings_service.py  payment_service.py  po_sync_service.py  queries.py  sync_results.py  xero_startup_check.py  xero_sync_job.py
backend/finance/domain/: billing_entity.py  credit_note.py  fiscal_period.py  invoice.py  ledger.py  org_settings.py  payment.py  xero_settings.py
backend/finance/infrastructure/: _invoice_fetch.py  billing_entity_repo.py  credit_note_repo.py  fiscal_period_repo.py  invoice_mutations.py  invoice_repo.py  invoice_xero_queries.py  ledger_repo.py  oauth_state_repo.py  org_settings_repo.py  payment_repo.py  schema.py
backend/finance/ports/: invoice_repo_port.py  invoicing_port.py  payment_repo_port.py  xero_port.py
backend/identity/api/: addresses.py  audit.py  auth.py  auth_deps.py  billing_entities.py  seed.py  settings.py
backend/identity/application/: auth_service.py  billing_entity_service.py  oauth_service.py  org_service.py  user_service.py
backend/identity/domain/: billing_entity.py  org_settings.py  organisation.py  user.py
backend/jobs/api/: jobs.py
backend/kernel/: __init__.py  constants.py  entity.py  errors.py  events.py  types.py
backend/models/: __init__.py  invoice.py  org_settings.py  product.py  user.py  vendor.py  withdrawal.py
backend/ports/: __init__.py  payment.py  xero.py
backend/repositories/: __init__.py  department_repo.py  invoice_repo.py  org_settings_repo.py  payment_repo.py  po_repo.py  product_repo.py  sku_repo.py  stock_repo.py  user_repo.py  vendor_repo.py  withdrawal_repo.py
backend/scripts/: agent_monitor.py  backfill_withdrawal_costs.py  create_admin.py  verify_deploy.py  xero_smoke_test.py
backend/services/: __init__.py  assistant.py  document_enrichment.py  document_import.py  document_import_service.py  inventory.py  llm.py  ocr_parse.py  product_lifecycle.py  purchase_order_service.py  sku_service.py  uom_classifier.py  withdrawal_service.py
backend/tests/: conftest.py  test_accounting_standards.py  test_adjustment_ledger_routing.py  test_architecture.py  test_barcode_api.py  test_barcode_validation.py  test_contractors_api.py  test_cycle_count.py  test_decimal_quantities.py  test_domain_invariants.py  test_event_hub.py  test_integration.py  test_inventory.py  test_invoice_repo.py  test_llm_anthropic.py  test_material_request.py  test_memory.py  test_po_receive.py  test_product_lifecycle.py  test_repo_contracts.py  test_schema_single_source.py  test_sell_cost_normalization.py  test_session_store.py  test_stock_ledger_integrity.py  test_stripe_payments.py  test_websocket.py  test_withdrawal_service.py  test_ws_chat.py  test_xero_adapter.py  test_xero_sync_job.py
(+455 files in other folders)
