[project]
name = "sku-ops-backend"
version = "0.1.0"
description = "SKU Operations — backend API"
authors = [{ name = "nooz" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = "MIT"

dependencies = [
    # ── Core ──
    "fastapi>=0.110.1",
    "uvicorn>=0.25.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.4",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",
    # ── Auth ──
    "pyjwt>=2.10.1",
    "bcrypt==4.1.3",
    "passlib>=1.7.4",
    # ── Database ──
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    # ── AI / LLM ──
    "pydantic-ai>=1.0.0",
    "pydantic-ai-slim[anthropic]>=1.0.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    # ── Document processing ──
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pypdf>=4.0.0",
    "pdf2image>=1.17.0",
    # ── HTTP / OAuth ──
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "requests-oauthlib>=2.0.0",
    "cryptography>=42.0.8",
    # ── Config / Serialization ──
    "PyYAML>=6.0",
    "tzdata>=2024.2",
    # ── Production hardening ──
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.12.1",
    "cz-conventional-gitmoji>=0.7.0",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14.0",
]

# =============================================================================
# RUFF — linter + formatter (replaces black, isort, flake8, mypy)
# =============================================================================
[tool.ruff]
fix = true
line-length = 100
src = [".", "tests"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "ERA",    # eradicate (commented-out code)
    "F",      # pyflakes
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "INP",    # flake8-no-pep420
    "INT",    # flake8-gettext
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PLC",    # pylint conventions
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "PT",     # flake8-pytest-style
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific
    "S",      # bandit (security)
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "YTT",    # flake8-2020
]
ignore = [
    "E501",   # line-too-long (formatter handles)
    "PLC0415",  # import-outside-top-level: lazy imports to avoid circular deps / defer heavy loads
    "S101",   # assert used in tests + runtime contracts
    "TRY003", # inline raise messages (project style)
    "TRY300", # try-consider-else (stylistic)
    "RET504", # assign-before-return (stylistic)
]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806", "PLR2004", "PLR0913", "PLR0915", "S108", "ARG001"]
"scripts/**" = ["T201", "INP001"]
"devtools/**" = ["T201", "INP001"]
"server.py" = ["T201"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

# =============================================================================
# COMMITIZEN — conventional commits + auto-versioning + changelog
# =============================================================================
[tool.commitizen]
name = "cz_gitmoji"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
bump_message = "🔖 bump(release): v$current_version → v$new_version"
version_files = [
    "backend/pyproject.toml:^version",
]
path = ".cz-config.js"

[tool.commitizen.customize]
example = "feat: this feature enables customizing through pyproject.toml file"
schema = """
<type>(<scope>): <subject> \n
<BLANK LINE> \n
<body> \n
<BLANK LINE> \n
(BREAKING CHANGE: )<breaking> \n
<BLANK LINE> \n
(ISSUES: )<footer>
"""
schema_pattern = "(?s)(✨ feat|🐛 fix|🚑 hotfix|🔧 chore|♻️ refactor|🚧 WIP|📚 docs|⚡️ perf|💄 style|🏗️ build|👷 ci|✅ test|⏪ revert|➕ add_dep|➖ rem_dep|💥 boom)(\\(\\S+\\))?!?:( [^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"
bump_pattern = "^(✨ feat|🐛 fix|🚑 hotfix|⚡️ perf|♻️ refactor|⏪ revert|➕ dep-add|➖ dep-rm|💥 boom)"
bump_map = {"BREAKING CHANGE" = "MAJOR", "💥 boom" = "MAJOR", "✨ feat" = "MINOR", "🐛 fix" = "PATCH", "🚑 hotfix" = "PATCH", "⚡️ perf" = "PATCH", "♻️ refactor" = "PATCH", "➕ dep-add" = "PATCH", "➖ dep-rm" = "PATCH"}
change_type_order = ["BREAKING CHANGE", "💥 boom", "✨ feat", "🐛 fix", "🚑 hotfix", "♻️ refactor", "⚡️ perf", "🏗️ build", "💄 style", "📚 docs", "➕ dep-add", "➖ dep-rm"]
commit_parser = "^(?P<change_type>✨ feat|🐛 fix|🚑 hotfix|🔧 chore|♻️ refactor|🚧 WIP|📚 docs|⚡️ perf|💄 style|🏗️ build|👷 ci|✅ test|⏪ revert|➕ add_dep|➖ rem_dep|💥 boom):\\s(?P<message>.*)?"
changelog_pattern = "^(✨ feat|🐛 fix|🚑 hotfix|🔧 chore|♻️ refactor|🚧 WIP|📚 docs|⚡️ perf|💄 style|🏗️ build|👷 ci|✅ test|⏪ revert|➕ dep-add|➖ dep-rm|💥 boom)?(!)?"
change_type_map = {"💥 boom" = "Breaking Changes", "🏗️ build" = "Build", "👷 ci" = "CI", "📚 docs" = "Docs", "✨ feat" = "Feat", "🐛 fix" = "Fix", "🚑 hotfix" = "Hotfix", "⚡️ perf" = "Perf", "♻️ refactor" = "Refactor", "💄 style" = "Style", "✅ test" = "Test", "🔧 chore" = "Chore", "⏪ revert" = "Revert", "➕ dep-add" = "Added Dependency", "➖ dep-rm" = "Removed Dependency"}
