[project]
name = "sku-ops-backend"
version = "0.1.0"
description = "SKU Operations — backend API"
authors = [{ name = "nooz" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = "MIT"

dependencies = [
    # ── Core ──
    "fastapi>=0.110.1",
    "uvicorn>=0.25.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.4",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",
    # ── Auth ──
    "pyjwt>=2.10.1",
    "bcrypt==4.1.3",
    "passlib>=1.7.4",
    # ── Database ──
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    # ── AI / LLM ──
    "pydantic-ai>=1.0.0",
    "pydantic-ai-slim[anthropic]>=1.0.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    # ── Document processing ──
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pypdf>=4.0.0",
    "pdf2image>=1.17.0",
    # ── HTTP / OAuth ──
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "requests-oauthlib>=2.0.0",
    "cryptography>=42.0.8",
    # ── Config / Serialization ──
    "PyYAML>=6.0",
    "tzdata>=2024.2",
    # ── Production hardening ──
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.12.1",
    "cz-conventional-gitmoji>=0.7.0",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14.0",
]

# =============================================================================
# RUFF — linter + formatter (replaces black, isort, flake8, mypy)
# =============================================================================
[tool.ruff]
fix = true
line-length = 100
src = [".", "tests"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "ERA",    # eradicate (commented-out code)
    "F",      # pyflakes
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "INP",    # flake8-no-pep420
    "INT",    # flake8-gettext
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PLC",    # pylint conventions
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "PT",     # flake8-pytest-style
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific
    "S",      # bandit (security)
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "YTT",    # flake8-2020
]
ignore = [
    "E501",     # line-too-long (formatter handles)
    "PLC0415",  # import-outside-top-level: lazy imports to avoid circular deps
    "S101",     # assert used in tests + runtime contracts
    "TRY003",   # inline raise messages (project style)
    "TRY300",   # try-consider-else (stylistic)
    "RET504",   # assign-before-return (stylistic)
    "W505",     # doc-line-too-long: agent prompts/descriptions are intentionally long
    "SLF001",   # private-member-access: cross-module access common in modular monolith
    "S608",     # possible-sql-injection: all queries are parameterized, ruff can't verify
    "N811",     # constant-imported-as-non-constant: aliasing pattern used throughout
    "E741",     # ambiguous-variable-name: short vars in financial/math code
    "RUF001",   # ambiguous-unicode: intentional unicode characters
    "RUF002",   # ambiguous-unicode-docstring: intentional
    "RUF003",   # ambiguous-unicode-comment: gitmoji and i18n
    "PERF401",  # manual-list-comprehension: readability over micro-optimization
    "SIM117",   # multiple-with-statements: readability choice
    "BLE001",   # blind-except: intentional resilience in agent/infra code
    "S311",     # suspicious-non-cryptographic-random-usage: fine for non-crypto
    "PLW0603",  # global-statement: intentional singletons
    "ERA001",   # commented-out-code: intentional documentation
    "TRY301",   # raise-within-try: intentional re-raise patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806", "PLR2004", "PLR0913", "PLR0915", "S108", "ARG001", "ARG002", "S105", "B017", "PT011", "PT017", "PT018"]
"devtools/**" = ["T201", "INP001", "ASYNC230", "ASYNC240"]
"server.py" = ["T201", "E402"]
"assistant/**" = ["ASYNC230", "ASYNC240", "E402", "RUF006", "PLW2901", "B019", "ARG002"]
"shared/infrastructure/db/**" = ["ASYNC240", "E402"]
"finance/api/**" = ["RUF006"]
"operations/**" = ["PLW2901"]
# FastAPI Annotated[..., Depends(...)] aliases must be imported at runtime,
# not hidden in TYPE_CHECKING blocks — TC001/TC002/TC003 don't apply to api layers.
"*/api/**" = ["TC001", "TC002", "TC003"]
"shared/api/**" = ["TC001", "TC002", "TC003"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

# =============================================================================
# COMMITIZEN — conventional commit message validation (pre-commit hook)
# =============================================================================
[tool.commitizen]
name = "cz_gitmoji"
